<resources>
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="app_name">接活喽</string>
    <string name="finish">完成</string>
    <string name="sure">确定</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="login">登录</string>
    <string name="back">返回</string>
    <string name="detail">详情</string>
    <string name="delete">删除</string>
    <string name="go_to_auth">去认证</string>
    <string name="revise_success">修改成功</string>
    <string name="revise_failed">修改失败</string>
    <string name="about_us">关于我们</string>
    <string name="new_message_note">新消息提醒</string>
    <string name="revise_just_one_pri_month">注：一个月仅可修改一次</string>
    <string name="office_public_number">官方公众号</string>
    <string name="contact_us">联系我们</string>
    <string name="sure_contact_system_office">确定联系官方客服？</string>
    <string name="sure_delete_work_info">确定删除这条工作经历？</string>
    <string name="sure_feedback">确定反馈？</string>
    <string name="sure_revise_password">确定修改密码？</string>
    <string name="sure_revise_telephone">确定修改手机号？</string>
    <string name="sure_revise_sex">确定修改性别？</string>
    <string name="sure_logout">确定退出当前账号？</string>
    <string name="sure_correct">请务必保证准确无误</string>
    <string name="advance_feedback">意见反馈</string>
    <string name="preference">关注</string>
    <string name="preference_finish">完成设置</string>
    <string name="logout">退出登陆</string>
    <string name="choose_job_type">添加工种</string>
    <string name="add_address_orfen">添加接活地点</string>
    <string name="the_area_of_service">服务范围(公里)</string>
    <string name="all_of_city">全城</string>
    <string name="sysytem_will_push_by_job_type">系统会把最适合您的私活优先推送给您</string>
    <string name="sysytem_will_push_by_distance">系统会把距离最近的私活优先推送给您</string>
    <string name="sysytem_will_push_by_nearby">系统会自动把这附近的私活信息推送给您!</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="must_auth_can_apply">完成个人认证才可以申请哦</string>
    <string name="next_step">下一步</string>
    <string name="choose_date">选择日期</string>
    <string name="now_on">至今</string>
    <string name="nearby">附近</string>
    <string name="click_to_upload">点击上传</string>
    <string name="id_card_in_hand">手持身份证号</string>
    <string name="student_card_in_hand">手持学生证号</string>
    <string name="recommand">推荐</string>
    <string name="reset_input">重新输入</string>
    <string name="reset_send">重新发送</string>
    <string name="net_no_connected">无法连接网络，请检查网络配置</string>
    <string name="send_check_code">发送验证码</string>
    <string name="keep_agreement">请保持一致</string>
    <string name="register">注册</string>
    <string name="check_code">验证码</string>
    <string name="map_view">地图视图</string>
    <string name="list_view">列表视图</string>
    <string name="salary1">50-100元/天</string>
    <string name="salary2">101-200元/天</string>
    <string name="salary3">201-300元/天</string>
    <string name="salary4">301元以上/天</string>
    <string name="input_check_code_to_send_you">输入发送给您的验证码</string>
    <string name="please_input_checkcode">请输入验证码</string>
    <string name="sms_code_is_four_num">验证码是四位数的数字</string>
    <string name="no_net_connected">无网络连接，请检查网络配置</string>
    <string name="load_part_time_job_error">加载私活详情失败，请重新加载</string>
    <string name="cancel">取消</string>
    <string name="title_btn_takephoto">拍照获取</string>
    <string name="title_btn_localphoto">本地获取照片</string>
    <string name="retake_photo">重拍</string>
    <string name="use_this_cropper_photo">选取</string>
    <string name="default_loading">正在加载</string>
    <string name="title_activity_localphoto">本地相册</string>
    <string name="title_activity_cropper">图片截取</string>
    <string name="set_avatar">请设置头像</string>
    <string name="set_name">请输入姓名</string>
    <string name="your_name">您的姓名</string>
    <string name="set_advance_money">请输入预支金额</string>
    <string name="set_collection_account">请输入收款账号</string>
    <string name="please_choose_part_time_job_type">请选择工种</string>
    <string name="please_choose_characteristic">请选择特点</string>
    <string name="please_choose_educational">请选择学历</string>
    <string name="part_time_job_type_loading_failed">加载工种列表失败</string>
    <string name="characteristic_type_loading_failed">加载特点列表失败</string>
    <string name="what_characteristic_you_have">你有什么特点？</string>
    <string name="view">视图</string>
    <string name="job_type">工种</string>
    <string name="please_update_app">当前版本不支持此种类型，请升级</string>
    <string name="examining">审核中</string>
    <string name="please_wait_in_patience">请耐心等待</string>
    <string name="examining_in_five_minutes">5分钟内完成审核</string>
    <string name="examine_successed">已通过</string>
    <string name="examine_error">未通过</string>
    <string name="advance_record">预支纪录</string>
    <string name="advance_salary">预支工资</string>
    <string name="alipay_or_bank_card">本人支付宝号或银行账号</string>
    <string name="collection_account">收款账号</string>
    <string name="advance_salary_highest">最高可预支10000元</string>
    <string name="explain">说明</string>
    <string name="apply_money">申请：¥</string>
    <string name="apply_time">时间： </string>
    <string name="examine_error_tip">建议重新编辑后提交</string>
    <string name="examine_success_tip">请保持通话畅通，客服将会在2小时内上门为您服务</string>
    <string name="salary">报酬 · </string>
    <string name="setting">设置</string>
    <string name="time">时间</string>
    <string name="area">区域</string>
    <string name="member_count">人数</string>
    <string name="need_help_below">需要服务人员提供如下帮助</string>
    <string name="nedd_characteristic_below">希望服务人员有以下几个特点</string>
    <string name="other_introdution">其他说明</string>
    <string name="publish_message_above">发布以上信息</string>
    <string name="address">地点</string>
    <string name="request_failed">网络错误</string>
    <string name="feedback_failed">反馈失败</string>
    <string name="feedback_success">反馈成功</string>
    <string name="please_input_feedback">请输入反馈意见</string>
    <string name="login_failed">登录失败</string>
    <string name="register_failed">注册失败</string>
    <string name="request_token_failed">token获取异常</string>
    <string name="upload_avatar_failed">上传头像失败</string>
    <string name="upload_avatar_success">上传头像成功</string>
    <string name="find_no_sdcard_no_store_pic">未找到存储卡，无法存储照片！</string>
    <string name="mobile_formart_error">手机号码格式有误，请检查后输入</string>
    <string name="send_message">发送短信</string>
    <string name="send">发送</string>
    <string name="from_store">从手机相册选择</string>
    <string name="from_camera">拍照</string>
    <string name="mine">我的</string>
    <string name="message">消息</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="specialty">专科</string>
    <string name="undergraduate">本科</string>
    <string name="master">硕士</string>
    <string name="doctor">博士</string>
    <string name="specialty1">专</string>
    <string name="undergraduate1">本</string>
    <string name="master1">硕</string>
    <string name="doctor1">博</string>
    <string name="system">系统</string>
    <string name="system_message">系统消息</string>
    <string name="chat">聊天</string>
    <string name="feedback_hint">您有任何意见和建议都可以通过这里向我们团队述说......记住是任何话哦！还不明白？意思是大到国家大事，小到鸡毛蒜皮，私生活也口以哒......</string>
    <string name="about_text">接活儿</string>
    <string name="get_no_mobile">对不起，没有获取到手机号码</string>
    <string name="get_no_mobile_to_send_message">对不起，没有获取到手机号码,不能发送短信</string>
    <string name="work_experence">工作经历</string>
    <string name="work_experence_add">添加经历</string>
    <string name="work_experence_intro">一句话概括这个经历</string>
    <string name="work_experence_decriptor">详细描述一下这个经历</string>
    <string name="work_experence_type">给这段经历分类</string>
    <string name="avatar">头像</string>
    <string name="nickname">有了称呼，便于交友</string>
    <string name="nick">昵称</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_input_content">请输入内容</string>
    <string name="your_nickname">你的昵称</string>
    <string name="input_nickname_you_like">录入自己喜欢的称呼</string>
    <string name="sex">性别</string>
    <string name="your_sex">你的性别</string>
    <string name="your_education">你的学历</string>
    <string name="can_revise_just_once">注：仅可修改一次</string>
    <string name="can_revise_just_once_one_year">注：一年可修改一次</string>
    <string name="school">学校</string>
    <string name="enter_school_time">入学时间</string>
    <string name="degrees">学历</string>
    <string name="has_auth">已认证</string>
    <string name="authing">认证中</string>
    <string name="auth_failed">认证失败</string>
    <string name="no_auth">未认证</string>
    <string name="paid_account">收款账号</string>
    <string name="open_account_name">开户姓名</string>
    <string name="open_account_bank">开户银行</string>
    <string name="input_alipay_or_bank_card">录入本人支付宝账号或银行卡号</string>
    <string name="please_input_alipay_or_bank_card">请输入本人支付宝账号或银行卡号</string>
    <string name="input_open_account_name">录入开户人姓名</string>
    <string name="please_input_open_account_name">请输入开户人姓名</string>
    <string name="input_open_account_bank">录入开户行</string>
    <string name="please_input_open_account_bank">请输入开户行</string>
    <string name="integrity">诚信报告</string>
    <string name="sure_must_your_account">注：务必是您本人账户</string>
    <string name="new_telephone_number">新手机号</string>
    <string name="call_telephone">拨打电话</string>
    <string name="do_you_sure_call_phone">您确定拨打此号码吗？</string>
    <string name="set_mobile">请输入手机号码</string>
    <string name="please_input_telephone">请输入您的手机号</string>
    <string name="please_input_new_phone">请输入新手机号</string>
    <string name="load_mobile_error">获取手机号码失败，请重新加载</string>
    <string name="mobile_when_register">注册时的手机号</string>
    <string name="telephone_number">手机号码</string>
    <string name="user_password">用户密码</string>
    <string name="revise_mobile">修改手机号</string>
    <string name="office_telephone_number_tip">400-345-7658</string>
    <string name="office_telephone_number">4003457658</string>
    <string name="forgot_password">找回密码</string>
    <string name="find_password">找回密码</string>
    <string name="forgot_password_no_question_mark">忘记密码</string>
    <string name="account_password">账号密码</string>
    <string name="account_info">账户信息</string>
    <string name="revise_password">修改密码</string>
    <string name="set_new_password">设新密码</string>
    <string name="input_password">输入密码</string>
    <string name="please_input_password">请输入您的密码</string>
    <string name="password_need_to_lenth">密码必须8位数以上</string>
    <string name="summon">我需要</string>
    <string name="expand">详细说明</string>
    <string name="service_pay">服务报酬</string>
    <string name="new_user">新用户注册</string>
    <string name="xpand_hint">详细说明您的需求</string>
    <string name="summon_hint">一句话表达您的需求</string>
    <string name="price">填报酬</string>
    <string name="server_time">服务时间</string>
    <string name="choose_sercer_time">选择服务时间</string>
    <string name="contact_way">联系方式</string>
    <string name="choose_contact_way">选择联系方式</string>
    <string name="withdrawal_amount">提现金额</string>
    <string name="person_name">本人姓名</string>
    <string name="receive_account">收款账户</string>
    <string name="now_withdraw_deposit">马上提现</string>
    <string name="please_input_withdraw_deposit_money">请输入提现金额</string>
    <string name="please_input_person_name">请输入本人姓名</string>
    <string name="please_intpt_account">请输入收款账户</string>
    <string name="frozen_money">冻结保证金</string>
    <string name="thousand">1000.00</string>
    <string name="apply_unfreeze">申请解冻</string>
    <string name="choose_report_type">选择举报原因</string>
    <string name="report_type_one">传播淫秽、色情、黄赌毒</string>
    <string name="report_type_two">侵权(冒名、抄袭、诽谤)</string>
    <string name="report_type_three">反党、反人类</string>
    <string name="rate">评分</string>
    <string name="evaluate">评价</string>
    <string name="comment_hint">评价几句，表扬、鼓励一下！让合作更愉快</string>
</resources>