<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/choose_report_type"
        android:textColor="@color/color_e5e5e5"
        android:textSize="@dimen/smail_text" />

    <View style="@style/lineStyle" />

    <TextView
        android:id="@+id/tv_report_type_one"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_default"
        android:gravity="center"
        android:text="@string/report_type_one"
        android:textColor="@color/color_555555"
        android:textSize="16sp" />

    <View style="@style/lineStyle" />

    <TextView
        android:id="@+id/tv_report_type_two"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_default"
        android:gravity="center"
        android:text="@string/report_type_two"
        android:textColor="@color/color_555555"
        android:textSize="16sp" />

    <View style="@style/lineStyle" />

    <TextView
        android:id="@+id/tv_report_type_three"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_default"
        android:gravity="center"
        android:text="@string/report_type_three"
        android:textColor="@color/color_555555"
        android:textSize="16sp" />

    <View style="@style/lineStyle" />

    <TextView
        android:id="@+id/tv_report_cancle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_default"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_9b9b9b"
        android:textSize="16sp" />

</LinearLayout>