<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 用来存放actionbar的容器布局 -->

    <RelativeLayout
        android:id="@+id/rl_actionbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:divider="@drawable/shapa_driver_8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:showDividers="middle" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone_number"
            android:textColor="@color/color_555555" />

        <com.ysp.houge.widget.ClearEditText
            android:id="@+id/cet_phone_num"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/mobile_when_register"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="14sp" >

            <requestFocus />
        </com.ysp.houge.widget.ClearEditText>
    </LinearLayout>

    <View style="@style/lineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:divider="@drawable/shapa_driver_8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:showDividers="middle" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/user_password"
            android:textColor="@color/color_555555" />

        <com.ysp.houge.widget.ClearEditText
            android:id="@+id/cet_password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:maxLength="18"
            android:textSize="14sp" >
        </com.ysp.houge.widget.ClearEditText>
    </LinearLayout>

    <View style="@style/lineStyle" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TextView
            android:id="@+id/mForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="10dip"
            android:text="@string/forgot_password"
            android:textColor="@color/color_555555"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        style="@style/lineStyle"
        android:layout_marginTop="15dip" />

    <Button
        android:id="@+id/mLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_default"
        android:minHeight="48dp"
        android:text="@string/login"
        android:textColor="@color/color_555555"
        android:textSize="16sp" />

    <View style="@style/lineStyle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp">

        <TextView
            android:id="@+id/mNewUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="10dip"
            android:text="@string/new_user"
            android:textColor="@color/album_list_feeditem_nor"
            android:background="@color/status_text"
            android:textSize="16sp"/>

    </RelativeLayout>

</LinearLayout>