<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 用来存放actionbar的容器布局 -->

    <RelativeLayout
        android:id="@+id/rl_actionbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <View
        style="@style/lineStyle"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal_amount" />

        <!-- 提现金额 -->

        <com.ysp.houge.widget.ClearEditText
            android:id="@+id/cet_money"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_withdraw_deposit_money"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="14sp" >
        </com.ysp.houge.widget.ClearEditText>
    </LinearLayout>

    <View style="@style/lineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_name" />

        <!-- 本人姓名 -->

        <com.ysp.houge.widget.ClearEditText
            android:id="@+id/cet_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_person_name"
            android:inputType="text"
            android:maxLength="5"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="14sp" >
        </com.ysp.houge.widget.ClearEditText>
    </LinearLayout>

    <View style="@style/lineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_account" />

        <!-- 收款账户 -->

        <com.ysp.houge.widget.ClearEditText
            android:id="@+id/cet_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_intpt_account"
            android:inputType="text"
            android:maxLength="30"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textSize="14sp" >
        </com.ysp.houge.widget.ClearEditText>
    </LinearLayout>

    <View style="@style/lineStyle" />

    <View
        style="@style/lineStyle"
        android:layout_marginTop="60dp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_default"
        android:text="@string/now_withdraw_deposit"
        android:textSize="14sp" />

    <View
        style="@style/lineStyle"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/iv_withdraw_deposit_deal_choose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@null"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/tv_withdraw_deposit_deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

</LinearLayout>