<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 用来存放actionbar的容器布局 -->

    <RelativeLayout
        android:id="@+id/rl_actionbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingTop="30dp" >

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thousand"
            android:textColor="@color/color_app_theme_orange_bg"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frozen_money"
            android:textColor="@color/color_555555" />
    </LinearLayout>

    <View style="@style/lineStyle" />

    <View
        style="@style/lineStyle"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_unfreeze"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_default"
        android:text="@string/apply_unfreeze"
        android:textColor="@color/color_555555" />

    <View style="@style/lineStyle" />

</LinearLayout>